<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.alpha1.Hospital">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColorHint="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:id="@+id/textInputLayout11">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:id="@+id/edittextl"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:layout_below="@+id/textInputLayout11"
        android:layout_centerHorizontal="true"
        app:passwordToggleEnabled="true"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="44dp"
        android:id="@+id/textInputLayout12">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:inputType="textPassword"
            android:textColorHint="@color/colorPrimary"
            android:id="@+id/edittextk"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/address" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout12"
        android:layout_marginStart="19dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/round"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button8"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button7"
        android:layout_marginEnd="25dp"
        android:background="@drawable/round"
        android:text="@string/login"
        android:textColor="@android:color/white" />
</RelativeLayout>
